--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^21.0.3",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "autoprefixer": "^10.4.21",
+    "ng-angular-popup": "^2.1.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.17",
     "tslib": "^2.3.0",
